@@ -1,3 +1,7 @@
+Sun Sep 20 09:53:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/open3.rb (Open3#popen3): fixed and improved rdoc.  [ruby-core:25658]
+
 Fri Sep 18 14:44:13 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_select): wait specified time on select.
